Add standalone JavaFX launcher